<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    >
    <ScrollView android:id="@+id/dialogScrollView"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    	>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
				android:textStyle="bold"
			    android:textColor="#FF000000"
				android:text="@string/help_general_header"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
			    android:textColor="#FF000000"
				android:text="@string/help_general"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
				android:textStyle="bold"
			    android:textColor="#FF000000"
				android:text="@string/help_controls_header"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
			    android:textColor="#FF000000"
				android:text="@string/help_controls"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
				android:textStyle="bold"
			    android:textColor="#FF000000"
				android:text="@string/help_internal_files_header"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
			    android:textColor="#FF000000"
				android:text="@string/help_internal_files"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
				android:textStyle="bold"
			    android:textColor="#FF000000"
				android:text="@string/help_import_export_header"
				/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="16px"
			    android:textColor="#FF000000"
				android:text="@string/help_import_export"
				/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
