<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/measureapp.measureapp"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
	    >
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
        	android:layout_weight="1"
	    	>
	    	<TextView
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:text="@string/distance"/>
		    <Spinner 
    		    android:id="@+id/lengthUnitsSpinner"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:drawSelectorOnTop="true"
        		android:prompt="@string/units_prompt"
		    />
		</LinearLayout>
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
        	android:layout_weight="1"
	    	>
	    	<TextView
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:text="@string/area"/>
    		<Spinner 
        		android:id="@+id/areaUnitsSpinner"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:drawSelectorOnTop="true"
        		android:prompt="@string/units_prompt"
	    	/>
	    </LinearLayout>
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
        	android:layout_weight="1"
	    	>
	    	<TextView
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:text="@string/logging"/>
    		<Spinner 
        		android:id="@+id/loggingSpinner"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:drawSelectorOnTop="true"
        		android:prompt="@string/logging_prompt"
	    	/>
	    </LinearLayout>
	</LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	    <Button
			android:id="@+id/startButton"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/start"/>
		<Button
			android:id="@+id/resetButton"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/reset"/>
		<Button
			android:id="@+id/logButton"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:text="@string/log"/>
	</LinearLayout>
	<com.dafer45.dam.MeasureView
		android:id="@+id/measureView"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:keepScreenOn="true"/>
</LinearLayout>
